lot refactoring steps 4
