# auction-provider-procar/src/main/kotlin/com/procar/auction/converter/DocumentToAdminResponseConverters.kt
@@ -95,9 +95,7 @@ class LotDocumentToAdminLotResponseConverter : Converter<LotDocument, AdminLotRe
             totalBids = auction.totalBids,
             startTime = auction.startTime,
             endTime = auction.endTime,
-            timeRemaining = auction.timeRemaining,
-            auctionType = auction.auctionType,
-            buyItNowPrice = auction.buyItNowPrice
+            timeRemaining = auction.timeRemaining
         )
     }
     
